--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon -r dotenv/config src/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@vonage/server-sdk": "^2.10.8",
     "crypto": "^1.0.1",
     "dateformat": "^4.5.1",
+    "dotenv": "^9.0.2",
     "express": "^4.17.1",
+    "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.9",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "npm": "^7.13.0"
   }
 }
