--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dateformat": "^4.5.1",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
+    "https": "^1.0.0",
     "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.9",
