--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.9",
     "nodemon": "^2.0.7",
-    "npm": "^7.13.0"
+    "npm": "^7.13.0",
+    "randomstring": "^1.2.1"
   }
 }
