adjust infection and exposure request to be ready for risk score and separate health authority requests in a separate route handler with separate services file

--- a/.env
+++ b/.env
@@ -1,5 +1,11 @@
+# jwt secrets
 JWT_SECRET_KEY=GRAD-PROJ
+AUTHENTICATION_ALGORITHM=HS256
+# health authority secret key
+HEALTH_AUTHORITY_SECRET=ELHOKOMA
+# encryption secrets
+ENCRYPTION_ALGORITHM="aes-256-cbc"
+# pin code API 
 VONAGE_API_KEY=b8518a31
 VONAGE_API_SECRET=6NpNjL1WK71dYkE5
-ENCRYPTION_ALGORITHM="aes-256-cbc"
-AUTHENTICATION_ALGORITHM=HS256
+
