--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "https": "^1.0.0",
     "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "^5.12.9",
     "nodemon": "^2.0.7",
     "npm": "^7.13.0",
