--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watch --runInBand --infectionDeclaration.test.js",
     "dev": "nodemon src/index.js"
   },
   "author": "",
@@ -24,5 +24,9 @@
     "nodemon": "^2.0.7",
     "npm": "^7.13.0",
     "randomstring": "^1.2.1"
+  },
+  "devDependencies": {
+    "jest": "^27.0.6",
+    "supertest": "^6.1.3"
   }
 }
